dr cards z-index fixed

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -152,8 +152,8 @@
 	width: 800px;
 	max-width: 90%;
   margin:auto;
-  margin-top:-100px; 
-  z-index: 99;
+  margin-top:-80px; 
+  z-index: 1;
 }
 
 #dr-cards-container .dr-ccard{
